fix builds on JDK16/17